2006-06-09  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/datatransfer/DataFlavor.java
	(readExternal): Mark as stub,
	(writeExternal): Likewise,
	* java/awt/dnd/DropTargetContext.java
	(dropComplete): Mark as stub,
	(acceptDrag): Likewise,
	(rejectDrag): Likewise,
	(acceptDrop): Likewise,
	(rejectDrop): Likewise,
	(getCurrentDataFlavors): Likewise,
	(getTransferable): Likewise,
	* java/awt/dnd/DropTargetDropEvent.java
	(dropComplete): Mark as stub.

2006-06-09  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/javax/swing/text/html/parser/SmallHtmlAttributeSet.java
	(constructor): Do not lowercase the values.
	* javax/swing/text/html/HTMLDocument.java
	(HTMLReader.addSpecialElement): Implemented.
	* examples/gnu/classpath/examples/swing/HtmlDemo.java: New file.

2006-06-09  Raif S. Naffah  <raif@swiftdsl.com.au>

	On behalf of Matthew Wringe <mwringe@redhat.com>
	* gnu/java/security/Registry.java (ISO10126_PAD): New constant.
	* gnu/javax/crypto/pad/ISO10126.java: New class.
	* gnu/javax/crypto/pad/PadFactory.java (names): New field.
	(getInstance): Added support for ISO-10126 scheme.
	(getNames): Likewise.
	Cache result for speed.

2006-06-09  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/javax/crypto/pad/BasePad.java (selfTest): Re-factored to allow more
	flexible self-test by sub-classes.
	(test1BlockSize): New method.

2006-06-09  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(initComponentDefaults): Corrected 'ScrollBar.focusInputMap' entry,
	* javax/swing/plaf/basic/BasicScrollBarUI.java
	(installKeyboardActions): Implemented,
	(uninstallKeyboardActions): Implemented,
	(getInputMap): New method,
	(getActionMap): New method,
	(createActionMap): New method,
	(installUI): Call installKeyboardActions(),
	(uninstallUI): Call uninstallKeyboardActions().
	
2006-06-09  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicScrollPaneUI.java